--- a/index.html
+++ b/index.html
@@ -22,7 +22,16 @@
 
     <main>
 
-
+        <div class="container">
+            <div class="row">
+                <div class="col-16"></div>
+                <div class="col-16"></div>
+                <div class="col-16"></div>
+                <div class="col-16"></div>
+                <div class="col-16"></div>
+                <div class="col-16"></div>
+            </div>
+        </div>
 
     </main>
 
