--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="./css/app.css">
 </head>
 
@@ -22,14 +23,27 @@
 
     <main>
 
-        <div class="container">
+        <div class="container debug">
             <div class="row">
-                <div class="col-16"></div>
-                <div class="col-16"></div>
-                <div class="col-16"></div>
-                <div class="col-16"></div>
-                <div class="col-16"></div>
-                <div class="col-16"></div>
+                <div class="col-16">
+                    <div class="card">
+                        <section class="image-content">
+                            <img src="./img/1.webp">
+                            <div class="like-logo"><box-icon type='solid' name='heart'></box-icon></div>
+                            <div class="discount-badge"><strong>-50%</strong></div>
+                        </section>
+                        <section class="text-box">
+                            <p>Levi's</p>
+                            <strong>RELAXED FIT TEE UNISEX</strong>
+                            <p>14,99 € <s>29,99 €</s></p>
+                        </section>
+                    </div>
+                </div>
+                <div class="col-16"><img src="./img/1.webp"></div>
+                <div class="col-16"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
             </div>
         </div>
 
