ADD: style to text box

--- a/index.html
+++ b/index.html
@@ -29,13 +29,13 @@
                     <div class="card">
                         <section class="image-content">
                             <img src="./img/1.webp">
-                            <div class="like-logo"><box-icon type='solid' name='heart'></box-icon></div>
-                            <div class="discount-badge"><strong>-50%</strong></div>
+                            <!-- <div class="like-logo"><box-icon type='solid' name='heart'></box-icon></div>
+                            <div class="discount-badge"><strong></strong></div> -->
                         </section>
                         <section class="text-box">
-                            <p>Levi's</p>
+                            <p class="fs-14">Levi's</p>
                             <strong>RELAXED FIT TEE UNISEX</strong>
-                            <p>14,99 € <s>29,99 €</s></p>
+                            <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
                         </section>
                     </div>
                 </div>
