--- a/index.html
+++ b/index.html
@@ -23,14 +23,17 @@
 
     <main>
 
-        <div class="container debug">
+        <div class="container">
             <div class="row">
                 <div class="col-16">
                     <div class="card">
-                        <section class="image-content">
+                        <section class="image-content pos-rel">
                             <img src="./img/1.webp">
-                            <!-- <div class="like-logo"><box-icon type='solid' name='heart'></box-icon></div>
-                            <div class="discount-badge"><strong></strong></div> -->
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                                <div class="sostenibility-badge fs-14 color-white">Sostenibilità</div>
+                            </div>
                         </section>
                         <section class="text-box">
                             <p class="fs-14">Levi's</p>
@@ -39,6 +42,8 @@
                         </section>
                     </div>
                 </div>
+
+
                 <div class="col-16"><img src="./img/1.webp"></div>
                 <div class="col-16"><img src="./img/1.webp"></div>
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
