ADD: Roses Tee card

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                             <i class='bx bxs-heart'></i>
                             <div class="badges">
                                 <div class="discount-badge fs-14">50%</div>
-                                <div class="sostenibility-badge fs-14 color-white">Sostenibilità</div>
+                                <div class="eco-badge fs-14">Sostenibilità</div>
                             </div>
                         </section>
                         <section class="text-box">
@@ -43,9 +43,25 @@
                     </div>
                 </div>
 
+                <div class="col-16">
+                    <div class="card">
+                        <section class="image-content pos-rel">
+                            <img src="./img/2.webp">
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <p class="fs-14">Guess</p>
+                            <strong>ROSES TEE</strong>
+                            <p><strong class="fs-14 color-red">20,99 € </strong><s class="fs-14">29,99 €</s></p>
+                        </section>
+                    </div>
+                </div>
 
-                <div class="col-16"><img src="./img/1.webp"></div>
-                <div class="col-16"><img src="./img/1.webp"></div>
+
+                <div class="col-16"></div>
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
