--- a/index.html
+++ b/index.html
@@ -61,9 +61,27 @@
                 </div>
 
 
-                <div class="col-16"></div>
+                <div class="col-16">
+                    <div class="card">
+                        <section class="image-content pos-rel">
+                            <img src="./img/3.webp">
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <p class="fs-14">Come Zucchero Filato</p>
+                            <strong>VOGLIA DI COLORI PASTELLO</strong>
+                            <p><strong class="fs-14 color-red">129,99 € </strong><s class="fs-14">184,99 €</s></p>
+                        </section>
+                    </div>
+                </div>
+
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+
                 <div class="col-16 basis-33"><img src="./img/1.webp"></div>
             </div>
         </div>
