ADD: Tee Unisex card

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
                     </div>
                 </div>
 
-
                 <div class="col-16">
                     <div class="card">
                         <section class="image-content pos-rel">
@@ -78,11 +77,27 @@
                     </div>
                 </div>
 
-                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33">
+                    <div class="card">
+                        <section class="image-content pos-rel">
+                            <img src="./img/4.webp">
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                                <div class="eco-badge fs-14">Sostenibilità</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <p class="fs-14">Levi's</p>
+                            <strong>TEE UNISEX</strong>
+                            <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
+                        </section>
+                    </div>
+                </div>
 
-                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33"></div>
 
-                <div class="col-16 basis-33"><img src="./img/1.webp"></div>
+                <div class="col-16 basis-33"></div>
             </div>
         </div>
 
