ADD: Stripe Bodice and Maglione - Black cards

--- a/index.html
+++ b/index.html
@@ -95,9 +95,36 @@
                     </div>
                 </div>
 
-                <div class="col-16 basis-33"></div>
+                <div class="col-16 basis-33">
+                    <div class="card">
+                        <section class="image-content pos-rel">
+                            <img src="./img/5.webp">
+                            <i class='bx bxs-heart'></i>
+                        </section>
+                        <section class="text-box">
+                            <p class="fs-14">Maya Deluxe</p>
+                            <strong>STRIPE BODICE</strong>
+                            <p><strong class="fs-14 color-red">99,99 € </strong></p>
+                        </section>
+                    </div>
+                </div>
 
-                <div class="col-16 basis-33"></div>
+                <div class="col-16 basis-33">
+                    <div class="card">
+                        <section class="image-content pos-rel">
+                            <img src="./img/6.webp">
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="eco-badge fs-14">Sostenibilità</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <p class="fs-14">Esprit</p>
+                            <strong>MAGLIONE - BLACK</strong>
+                            <p><strong class="fs-14 color-red">29,99€</strong></p>
+                        </section>
+                    </div>
+                </div>
             </div>
         </div>
 
