ADD: header layout

--- a/index.html
+++ b/index.html
@@ -18,6 +18,20 @@
 
     <header>
 
+        <nav class="navbar">
+            <ul>
+                <li><a href="#">Donna</li></a>
+                <li><a href="#">Uomo</li></a>
+                <li><a href="#">Bambini</li></a>
+            </ul>
+            <img src="./img/boolean-logo.png">
+            <ul>
+                <li><a href="#"><i class='bx bx-user'></i></li></a>
+                <li><a href="#"></li><i class='bx bxs-heart' ></i></a>
+                <li><a href="#"></li><i class='bx bxs-shopping-bag' ></i></a>
+            </ul>
+        </nav>
+        
     </header>
 
 
