ADD: layout flex on navbar

--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
     <header>
 
         <nav class="navbar">
-            <ul>
+            <ul class="categories-menu">
                 <li><a href="#">Donna</li></a>
                 <li><a href="#">Uomo</li></a>
                 <li><a href="#">Bambini</li></a>
             </ul>
-            <img src="./img/boolean-logo.png">
-            <ul>
+            <img class="logo" src="./img/boolean-logo.png">
+            <ul class="account-menu">
                 <li><a href="#"><i class='bx bx-user'></i></li></a>
                 <li><a href="#"></li><i class='bx bxs-heart' ></i></a>
                 <li><a href="#"></li><i class='bx bxs-shopping-bag' ></i></a>
