--- a/index.html
+++ b/index.html
@@ -20,15 +20,15 @@
 
         <nav class="navbar">
             <ul class="categories-menu">
-                <li><a href="#">Donna</li></a>
-                <li><a href="#">Uomo</li></a>
-                <li><a href="#">Bambini</li></a>
+                <li><a href="#">Donna</a></li>
+                <li><a href="#">Uomo</a></li>
+                <li><a href="#">Bambini</a></li>
             </ul>
             <img class="logo" src="./img/boolean-logo.png">
             <ul class="account-menu">
-                <li><a href="#"><i class='bx bx-user'></i></li></a>
-                <li><a href="#"></li><i class='bx bxs-heart' ></i></a>
-                <li><a href="#"></li><i class='bx bxs-shopping-bag' ></i></a>
+                <li><a href="#"><i class='bx bx-user'></i></a></li>
+                <li><a href="#"><i class='bx bx-heart'></i></a></li>
+                <li><a href="#"><i class='bx bxs-shopping-bag'></i></a></li>
             </ul>
         </nav>
         
@@ -37,7 +37,7 @@
 
     <main>
 
-        <div class="container">
+        <div class="container padding-40y">
             <div class="row">
                 <div class="col-16">
                     <div class="card">
