ADD: footer content and style

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <header>
 
-        <nav class="navbar">
+        <nav class="navbar-header">
             <ul class="categories-menu">
                 <li><a href="#">Donna</a></li>
                 <li><a href="#">Uomo</a></li>
@@ -31,7 +31,7 @@
                 <li><a href="#"><i class='bx bxs-shopping-bag'></i></a></li>
             </ul>
         </nav>
-        
+
     </header>
 
 
@@ -146,6 +146,26 @@
 
 
     <footer>
+        <nav class="navbar-footer">
+            <div class="info">
+                <p><strong>Boolando s.r.l</strong></p>
+                <ul>
+                    <li><a class="fs-14" href="#">Informazioni legali</a></li>
+                    <li><a class="fs-14" href="#">Informativa sulla privacy</a></li>
+                    <li><a class="fs-14" href="#">Diritto di recesso</a></li>
+                </ul>
+            </div>
+            <div class="links">
+                <p><strong>Trovaci anche su</strong></p>
+                <ul>
+                    <li><a href="#"><i class='bx bxl-twitter'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-facebook-square'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-instagram-alt'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-pinterest'></i></a></li>
+                    <li><a href="#"><i class='bx bxl-youtube'></i></a></li>
+                </ul>
+            </div>
+        </nav>
 
     </footer>
 </body>
