--- a/index.html
+++ b/index.html
@@ -41,102 +41,114 @@
             <div class="row">
                 <div class="col-16">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/1.webp">
-                            <i class='bx bxs-heart'></i>
-                            <div class="badges">
-                                <div class="discount-badge fs-14">50%</div>
-                                <div class="eco-badge fs-14">Sostenibilità</div>
-                            </div>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Levi's</p>
-                            <strong>RELAXED FIT TEE UNISEX</strong>
-                            <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/1.webp">
+                                <i class='bx bxs-heart'></i>
+                                <div class="badges">
+                                    <div class="discount-badge fs-14">50%</div>
+                                    <div class="eco-badge fs-14">Sostenibilità</div>
+                                </div>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Levi's</p>
+                                <strong>RELAXED FIT TEE UNISEX</strong>
+                                <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-16">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/2.webp">
-                            <i class='bx bxs-heart'></i>
-                            <div class="badges">
-                                <div class="discount-badge fs-14">50%</div>
-                            </div>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Guess</p>
-                            <strong>ROSES TEE</strong>
-                            <p><strong class="fs-14 color-red">20,99 € </strong><s class="fs-14">29,99 €</s></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/2.webp">
+                                <i class='bx bxs-heart'></i>
+                                <div class="badges">
+                                    <div class="discount-badge fs-14">50%</div>
+                                </div>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Guess</p>
+                                <strong>ROSES TEE</strong>
+                                <p><strong class="fs-14 color-red">20,99 € </strong><s class="fs-14">29,99 €</s></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-16">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/3.webp">
-                            <i class='bx bxs-heart'></i>
-                            <div class="badges">
-                                <div class="discount-badge fs-14">50%</div>
-                            </div>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Come Zucchero Filato</p>
-                            <strong>VOGLIA DI COLORI PASTELLO</strong>
-                            <p><strong class="fs-14 color-red">129,99 € </strong><s class="fs-14">184,99 €</s></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/3.webp">
+                                <i class='bx bxs-heart'></i>
+                                <div class="badges">
+                                    <div class="discount-badge fs-14">50%</div>
+                                </div>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Come Zucchero Filato</p>
+                                <strong>VOGLIA DI COLORI PASTELLO</strong>
+                                <p><strong class="fs-14 color-red">129,99 € </strong><s class="fs-14">184,99 €</s></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/4.webp">
-                            <i class='bx bxs-heart'></i>
-                            <div class="badges">
-                                <div class="discount-badge fs-14">50%</div>
-                                <div class="eco-badge fs-14">Sostenibilità</div>
-                            </div>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Levi's</p>
-                            <strong>TEE UNISEX</strong>
-                            <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/4.webp">
+                                <i class='bx bxs-heart'></i>
+                                <div class="badges">
+                                    <div class="discount-badge fs-14">50%</div>
+                                    <div class="eco-badge fs-14">Sostenibilità</div>
+                                </div>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Levi's</p>
+                                <strong>TEE UNISEX</strong>
+                                <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/5.webp">
-                            <i class='bx bxs-heart'></i>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Maya Deluxe</p>
-                            <strong>STRIPE BODICE</strong>
-                            <p><strong class="fs-14 color-red">99,99 € </strong></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/5.webp">
+                                <i class='bx bxs-heart'></i>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Maya Deluxe</p>
+                                <strong>STRIPE BODICE</strong>
+                                <p><strong class="fs-14 color-red">99,99 € </strong></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <section class="image-content pos-rel">
-                            <img src="./img/6.webp">
-                            <i class='bx bxs-heart'></i>
-                            <div class="badges">
-                                <div class="eco-badge fs-14">Sostenibilità</div>
-                            </div>
-                        </section>
-                        <section class="text-box">
-                            <p class="fs-14">Esprit</p>
-                            <strong>MAGLIONE - BLACK</strong>
-                            <p><strong class="fs-14 color-red">29,99€</strong></p>
-                        </section>
+                        <a href="#">
+                            <section class="image-content pos-rel">
+                                <img src="./img/6.webp">
+                                <i class='bx bxs-heart'></i>
+                                <div class="badges">
+                                    <div class="eco-badge fs-14">Sostenibilità</div>
+                                </div>
+                            </section>
+                            <section class="text-box">
+                                <p class="fs-14">Esprit</p>
+                                <strong>MAGLIONE - BLACK</strong>
+                                <p><strong class="fs-14 color-red">29,99€</strong></p>
+                            </section>
+                        </a>
                     </div>
                 </div>
             </div>
