--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/1.webp">
+                                <figure>
+                                    <img src="./img/1.webp">
+                                    <img class="hover-index" src="./img/1b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                                 <div class="badges">
                                     <div class="discount-badge fs-14">50%</div>
