ADD: hover animation to all card images

--- a/index.html
+++ b/index.html
@@ -66,7 +66,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/2.webp">
+                                <figure>
+                                    <img src="./img/2.webp">
+                                    <img class="hover-index" src="./img/2b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                                 <div class="badges">
                                     <div class="discount-badge fs-14">50%</div>
@@ -85,7 +88,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/3.webp">
+                                <figure>
+                                    <img src="./img/3.webp">
+                                    <img class="hover-index" src="./img/3b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                                 <div class="badges">
                                     <div class="discount-badge fs-14">50%</div>
@@ -104,7 +110,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/4.webp">
+                                <figure>
+                                    <img src="./img/4.webp">
+                                    <img class="hover-index" src="./img/4b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                                 <div class="badges">
                                     <div class="discount-badge fs-14">50%</div>
@@ -124,7 +133,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/5.webp">
+                                <figure>
+                                    <img src="./img/5.webp">
+                                    <img class="hover-index" src="./img/5b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                             </section>
                             <section class="text-box">
@@ -140,7 +152,10 @@
                     <div class="card">
                         <a href="#">
                             <section class="image-content pos-rel">
-                                <img src="./img/6.webp">
+                                <figure>
+                                    <img src="./img/6.webp">
+                                    <img class="hover-index" src="./img/6b.webp">
+                                </figure>
                                 <i class='bx bxs-heart'></i>
                                 <div class="badges">
                                     <div class="eco-badge fs-14">Sostenibilità</div>
