--- a/index.html
+++ b/index.html
@@ -41,132 +41,151 @@
             <div class="row">
                 <div class="col-16">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
+                        <section class="image-content pos-rel">
+                            <a href="#">
                                 <figure>
                                     <img src="./img/1.webp">
                                     <img class="hover-index" src="./img/1b.webp">
                                 </figure>
-                                <i class='bx bxs-heart'></i>
-                                <div class="badges">
-                                    <div class="discount-badge fs-14">50%</div>
-                                    <div class="eco-badge fs-14">Sostenibilità</div>
-                                </div>
-                            </section>
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                                <div class="eco-badge fs-14">Sostenibilità</div>
+                            </div>
+                        </section>
+                        <a href="#">
                             <section class="text-box">
                                 <p class="fs-14">Levi's</p>
                                 <strong>RELAXED FIT TEE UNISEX</strong>
                                 <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
-                            </section>
                         </a>
+                        </section>
+
                     </div>
                 </div>
 
                 <div class="col-16">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
+                        <section class="image-content pos-rel">
+                            <a href="#">
                                 <figure>
                                     <img src="./img/2.webp">
                                     <img class="hover-index" src="./img/2b.webp">
                                 </figure>
-                                <i class='bx bxs-heart'></i>
-                                <div class="badges">
-                                    <div class="discount-badge fs-14">50%</div>
-                                </div>
-                            </section>
-                            <section class="text-box">
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <a href="#">
                                 <p class="fs-14">Guess</p>
                                 <strong>ROSES TEE</strong>
                                 <p><strong class="fs-14 color-red">20,99 € </strong><s class="fs-14">29,99 €</s></p>
-                            </section>
-                        </a>
+                            </a>
+                        </section>
+
                     </div>
                 </div>
 
                 <div class="col-16">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
+                        <section class="image-content pos-rel">
+                            <a href="#">
                                 <figure>
                                     <img src="./img/3.webp">
                                     <img class="hover-index" src="./img/3b.webp">
                                 </figure>
-                                <i class='bx bxs-heart'></i>
-                                <div class="badges">
-                                    <div class="discount-badge fs-14">50%</div>
-                                </div>
-                            </section>
-                            <section class="text-box">
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <a href="#">
                                 <p class="fs-14">Come Zucchero Filato</p>
                                 <strong>VOGLIA DI COLORI PASTELLO</strong>
-                                <p><strong class="fs-14 color-red">129,99 € </strong><s class="fs-14">184,99 €</s></p>
-                            </section>
-                        </a>
+                                <p><strong class="fs-14 color-red">129,99 € </strong><s class="fs-14">184,99 €</s>
+                                </p>
+                            </a>
+                        </section>
+
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
-                                <figure>
+                        <section class="image-content pos-rel">
+                            <figure>
+                                <a href="#">
                                     <img src="./img/4.webp">
                                     <img class="hover-index" src="./img/4b.webp">
-                                </figure>
-                                <i class='bx bxs-heart'></i>
-                                <div class="badges">
-                                    <div class="discount-badge fs-14">50%</div>
-                                    <div class="eco-badge fs-14">Sostenibilità</div>
-                                </div>
-                            </section>
-                            <section class="text-box">
+                            </figure>
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="discount-badge fs-14">50%</div>
+                                <div class="eco-badge fs-14">Sostenibilità</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <a href="#">
                                 <p class="fs-14">Levi's</p>
                                 <strong>TEE UNISEX</strong>
                                 <p><strong class="fs-14 color-red">14,99 € </strong><s class="fs-14">29,99 €</s></p>
-                            </section>
-                        </a>
+                            </a>
+                        </section>
+
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
+                        <section class="image-content pos-rel">
+                            <a href="#">
                                 <figure>
                                     <img src="./img/5.webp">
                                     <img class="hover-index" src="./img/5b.webp">
                                 </figure>
-                                <i class='bx bxs-heart'></i>
-                            </section>
-                            <section class="text-box">
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                        </section>
+                        <section class="text-box">
+                            <a href="#">
                                 <p class="fs-14">Maya Deluxe</p>
                                 <strong>STRIPE BODICE</strong>
                                 <p><strong class="fs-14 color-red">99,99 € </strong></p>
-                            </section>
-                        </a>
+                            </a>
+                        </section>
+
                     </div>
                 </div>
 
                 <div class="col-16 basis-33">
                     <div class="card">
-                        <a href="#">
-                            <section class="image-content pos-rel">
+                        <section class="image-content pos-rel">
+                            <a href="#">
                                 <figure>
                                     <img src="./img/6.webp">
                                     <img class="hover-index" src="./img/6b.webp">
                                 </figure>
-                                <i class='bx bxs-heart'></i>
-                                <div class="badges">
-                                    <div class="eco-badge fs-14">Sostenibilità</div>
-                                </div>
-                            </section>
-                            <section class="text-box">
+                            </a>
+                            <i class='bx bxs-heart'></i>
+                            <div class="badges">
+                                <div class="eco-badge fs-14">Sostenibilità</div>
+                            </div>
+                        </section>
+                        <section class="text-box">
+                            <a href="#">
                                 <p class="fs-14">Esprit</p>
                                 <strong>MAGLIONE - BLACK</strong>
                                 <p><strong class="fs-14 color-red">29,99€</strong></p>
-                            </section>
-                        </a>
+                            </a>
+                        </section>
+
                     </div>
                 </div>
             </div>
